# eval-rag

./: .gitignore  README.md  pyproject.toml
app/: Cargo.toml
app/backend/: Cargo.toml
app/backend/src/: main.rs
app/frontend/: Cargo.toml  index.html
app/frontend/src/: main.rs
configs/: core.yaml  prompt.yaml
evalrag/: Dockerfile  __init__.py  api.py  main.py  pyproject.toml
evalrag/api/: config.py  main.py  models.py
evalrag/api/model/: document.py
evalrag/core/: __init__.py  _indexing.py  config.py  eval.py  ingestion.py  main.py  rag.py
evalrag/core/config/: __init__.py  core_config.py
evalrag/core/eval/: judge.py
evalrag/core/ingestion/: __init__.py  _indexing.py  chunkers.py  embedding.py  loader.py  test.py
evalrag/core/rag/: __init__.py  generator.py  prompts.py  retriever.py
evalrag/datasets/: qa_generation.py
