[project]
name = "eval-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "langchain>=1.1.3",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.0.0",
    "pypdf>=6.4.2",
    "pyyaml>=6.0.3",
]
